--- a/css/navbar.css
+++ b/css/navbar.css
@@ -133,3 +133,57 @@ body {
 .contact-link:hover {
     background-color: #ff4655;
 }
+
+@media (max-width: 768px) {
+  .navbar {
+    flex-direction: column;
+    align-items: flex-start;
+    padding: 10px;
+  }
+
+  .navbar-container {
+    flex-direction: column;
+    align-items: flex-start;
+  }
+
+  .nav-menu {
+    flex-direction: column;
+    align-items: flex-start;
+    width: 100%;
+  }
+
+  .nav-item {
+    margin: 5px 0;
+  }
+
+  .nav-link {
+    font-size: 14px;
+    padding: 8px 12px;
+  }
+
+  .nav-extra {
+    width: 100%;
+    justify-content: flex-start;
+    margin: 10px 0 0 0;
+  }
+
+  .logo {
+    position: static;
+    margin-bottom: 10px;
+  }
+
+  .logo img {
+    height: 30px;
+  }
+
+  .dropdown-menu {
+    position: relative;
+    width: 100%;
+    box-shadow: none;
+    border: 1px solid #444;
+  }
+
+  .dropdown-menu li a {
+    padding-left: 20px;
+  }
+}
