--- a/css/transparent.css
+++ b/css/transparent.css
@@ -70,73 +70,38 @@ ol li p {
       }
     }
 
-    @media (max-width: 768px) {
+@media (max-width: 768px) {
   .full-box {
     padding: 20px 15px;
     border-radius: 10px;
+    margin: 10px;
   }
 
   .full-box h1 {
-    font-size: 1.5em;
+    font-size: 1.6em;
     text-align: center;
+    margin-bottom: 15px;
   }
 
   .full-box p,
   ol li p {
     font-size: 0.95em;
     text-align: justify;
+    line-height: 1.6;
   }
 
   ol {
-    padding-left: 1.5em;
+    padding-left: 1.2em;
   }
 
   ol li {
     font-size: 1em;
+    margin-bottom: 20px;
   }
 
   .judul {
     font-size: 2em;
     padding: 0 10px;
     line-height: 1.3;
-  }
-
-  .sub {
-    font-size: 0.9em;
-  }
-
-  body {
-    padding: 10px;
-  }
-
-  .navbar {
-    flex-direction: column;
-    align-items: flex-start;
-  }
-
-  .nav-menu {
-    flex-direction: column;
-    align-items: flex-start;
-    width: 100%;
-  }
-
-  .nav-item {
-    margin: 5px 0;
-  }
-
-  .nav-link {
-    font-size: 14px;
-    padding: 8px 12px;
-  }
-
-  .nav-extra {
-    margin-top: 10px;
-    margin-right: 0;
-    width: 100%;
-    justify-content: flex-start;
-  }
-
-  .logo img {
-    height: 30px;
   }
 }
